<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">主页</string>
    <string name="menu_gallery">相册</string>
    <string name="menu_slideshow">华东</string>
    <string name="menu_tools">工具箱</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">发送</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_jump">跳过</string>
    <string name="user_import_title">助记词导入</string>
    <string name="user_create_title">备份助记词</string>
    <string name="node_setting">远程节点设置</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="tip_user_create">请按顺序抄写下方12个助记词我们将在下一步验证</string>
    <string name="tip_user_create2">请将您抄下的12个单词按正确顺序输入至下方</string>
    <string name="approved">审核通过</string>
    <string name="transaction">uyt链交易中</string>
    <string name="audit_failures">审核失败</string>
    <string name="transform_time">转换时间</string>
    <string name="string_yes">是</string>
    <string name="string_no">否</string>
    <string name="asset_transform">资产转换</string>
    <string name="confirm_withdraw">确认提现 ？</string>
    <string name="i_remember">我记住了</string>
    <string name="export_reminder">导出新助记词重要提醒</string>
    <string name="export_reminder_content">由于UYT NETWORK公链升级，账户原有的助记词将发生改变，请您在移动端或PC端登录后导出最新的助记词。并妥善保管好。</string>
    <string name="tip_user_import">请输入助记词(单词间以空格为结束)</string>
    <string name="important_remind">重要提示，请仔细阅读</string>
    <string name="important_remind_msg">由于UYT NETWORK主网升级，提币前需要进行资产转换，\n流程如下</string>
    <string name="first_step">第一步</string>
    <string name="first_step_one">1、填写提币数量，点击资产转换按钮。</string>
    <string name="first_step_two">2、主网根据当前币种资产数量协调配置进行资产转换。</string>
    <string name="first_step_bottom">资产转换需要等待24小时</string>
    <string name="second_step">第二步</string>
    <string name="second_step_one">1、查看待提列表，点击待提币种详情。</string>
    <string name="second_step_two">2、填写提币地址，备注，点击提币按钮。</string>
    <string name="second_step_three">3、校验地址、提币数量、输入密码。</string>
    <string name="second_step_bottom">此流程需要大概等待3个区块确认</string>
    <string name="collect_money">收款</string>
    <string name="miner_fee">矿工费</string>
    <string name="estimated_miner_fee">预计矿工费</string>
    <string name="mining_revenue">挖矿收益</string>
    <string name="record_operation">操作</string>
    <string name="to_be_extract">待提</string>
    <string name="to_be_extract_list">待提列表</string>
    <string name="interest_drawn">待提利息</string>
    <string name="extraction_mining_income">提取挖矿收益</string>
    <string name="user_create_remembered">我已备份助记词</string>
    <string name="please_input_topic">请输入标签</string>
    <string name="please_input_referrer">推荐账户(地址)</string>
    <string name="please_input_node">推荐节点(地址)</string>
    <string name="please_input_pass">请输入密码</string>
    <string name="please_input_pass_again">请输入确认密码</string>
    <string name="hint_node_select">节点参考</string>
    <string name="hint_user_protocol">我已仔细阅读并同意</string>
    <string name="hint_user_protocol_name">《服务与隐私条款》</string>
    <string name="node_title_rank">排名</string>
    <string name="node_title_name">名称</string>
    <string name="node_title_addr">节点</string>
    <string name="node_register_confirm">交易签名</string>
    <string name="node_register_node_name">节点名称</string>
    <string name="node_register_name_hint">名称 (唯一且不可更改，注册后不可转让)</string>
    <string name="node_register_referrer_hint">推荐节点地址或名称</string>
    <string name="node_register_website_hint">节点官网</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="next_step">下一步</string>
    <string name="node_register_title">注册节点</string>
    <string name="node_register_title2">注册</string>
    <string name="node_vote_history_title">投票记录</string>
    <string name="node_register_fee">节点费用</string>
    <string name="node_assets_base">自抵押数(UYT)</string>
    <string name="node_assets_score">总得票数(UYT)</string>
    <string name="node_assets_cash">奖池金额(UYT)</string>
    <string name="node_vote">投票</string>
    <string name="user_sign_confirm">确认签名</string>
    <string name="hint_node_assets_base">抵押金额</string>
    <string name="tip_user_balance">可用余额</string>
    <string name="test_value">1000 UYT</string>
    <string name="hint_input_vote_num">请输入投票数量</string>
    <string name="title_vote_count">投票数量</string>
    <string name="title_switch_count">转投数量</string>
    <string name="title_redeem_count">赎回数量</string>
    <string name="title_deduct_count">提息数量</string>
    <string name="title_vote_fee">投票费用</string>
    <string name="title_switch_fee">转投费用</string>
    <string name="title_redeem_fee">赎回费用</string>
    <string name="title_deduct_fee">提息费用</string>
    <string name="vote_again_name">续投</string>
    <string name="title_user_address">用户地址</string>
    <string name="title_user_address2">账户地址</string>
    <string name="title_user_node_address">节点地址</string>
    <string name="test_address">8d8dbe5b6412274b6481112241f09b2fe</string>
    <string name="title_vote_mine">我的投票</string>
    <string name="title_vote_accrual">待领利息</string>
    <string name="title_vote_redeem">赎回</string>
    <string name="title_vote_deduct">提息</string>
    <string name="title_vote_turn">转投</string>
    <string name="title_vote_his_opt">操作</string>
    <string name="title_vote_his_num">数量</string>
    <string name="title_vote_his_time">时间</string>
    <string name="title_asset_sum">总账户资产折合(CNY)</string>
    <string name="please_input_words">请输入助记词(单词间以空格为结束)</string>
    <string name="title_invite_address">邀请地址</string>
    <string name="title_safe_center">安全中心</string>
    <string name="title_base_set">基本设置</string>
    <string name="title_node_related">节点相关</string>
    <string name="title_asset_xut">UYT资产</string>
    <string name="title_asset_transfer">转账</string>
    <string name="title_asset_transfer_count">转账数量</string>
    <string name="title_asset_transfer_fee">转账费用</string>
    <string name="title_cross_asset">跨链资产</string>
    <string name="title_asset_map_cancel">取消映射</string>
    <string name="title_asset_map_cancel_count">取消映射数量</string>
    <string name="title_asset_map_cancel_fee">取消映射费用</string>
    <string name="title_asset_map">映射</string>
    <string name="title_asset_map_count">映射数量</string>
    <string name="title_asset_map_fee">映射费用</string>
    <string name="tip_please_check_word">请检查助记词</string>
    <string name="tip_please_pass_confirm">请确认密码输入</string>
    <string name="tip_create_account_success">创建成功</string>
    <string name="tip_import_account_success">导入成功</string>
    <string name="title_invite_nick">昵称</string>
    <string name="title_invite_address_me">我邀请的地址</string>
    <string name="title_modify_nick">修改昵称</string>
    <string name="title_modify_pass">修改密码</string>
    <string name="title_modify_export_words">导出助记词</string>
    <string name="title_modify_contact">联系人地址</string>
    <string name="title_qr_code">二维码</string>
    <string name="title_node_icon_select">选择节点标志</string>
    <string name="title_recharge_btc">BTC充值地址</string>
    <string name="title_recharge_title">充值提示：</string>
    <string name="please_input_deduct_count">请输入提息数量</string>
    <string name="please_input_redeem_count">请输入赎回数量</string>
    <string name="please_input_turn_count">请输入转投数量</string>
    <string name="please_input_turn_address">转投节点地址</string>
    <string name="please_input_transfer_count">请输入转账数量</string>
    <string name="please_input_map_count">请输入映射数量</string>
    <string name="please_input_withdraw_count">请输入提现数量</string>
    <string name="please_input_map_cancel_count">请输入取消映射数量</string>
    <string name="please_input_dns_transfer_address">请输入接收人地址(UYT)</string>
    <string name="please_input_btc_transfer_address">请输入接收人地址(UYT)</string>
    <string name="please_input_eth_transfer_address">请输入接收人地址(UYT)</string>
    <string name="please_input_usdt_transfer_address">请输入接收人地址(UYT)</string>
    <string name="please_input_btc_withdraw_address">请输入BTC提现地址</string>
    <string name="please_input_eth_withdraw_address">请输入ETH提现地址</string>
    <string name="please_input_usdt_withdraw_address">请输入USDT(ERC20)提现地址</string>
    <string name="please_input_ht_withdraw_address">请输入HT(ERC20)提现地址</string>
    <string name="please_input_vote_again_count">请输入续投数量</string>
    <string name="title_dns">UYT</string>
    <string name="title_d_btc">D-BTC(BTC)</string>
    <string name="title_d_eth">D-ETH(ETH)</string>
    <string name="title_d_usdt">D-USDT</string>
    <string name="title_vote_block">投票冻结</string>
    <string name="title_deal_block">交易冻结</string>
    <string name="title_balance_sum">总余额</string>
    <string name="title_financial_record">财务记录</string>
    <string name="title_deal_hash">交易哈希</string>
    <string name="title_recharge_address">充值地址</string>
    <string name="title_finance_note">备注</string>
    <string name="title_account_login">点击导入/新增帐户</string>
    <string name="title_node_user">节点用户</string>
    <string name="title_change_node_icon">修改节点标志</string>
    <string name="node_register_opt_fee">注册节点费用</string>
    <string name="tip_node_register_success">注册节点成功</string>
    <string name="tip_vote_success">投票成功</string>
    <string name="title_redeem_balance">可赎回余额</string>
    <string name="title_switch_balance">可转投余额</string>
    <string name="title_transfer_balance">可转账余额</string>
    <string name="title_withdraw_balance">可提现余额</string>
    <string name="title_mapping_balance">可映射余额</string>
    <string name="title_cancel_mapping_balance">可取消映射余额</string>
    <string name="title_deduct_balance">可提息余额</string>
    <string name="tip_vote_switch_success">转投成功</string>
    <string name="tip_vote_deduct_success">提息成功</string>
    <string name="tip_vote_redeem_success">赎回成功</string>
    <string name="title_switch_address">转投地址</string>
    <string name="title_transfer_target_address">接收人地址</string>
    <string name="tip_asset_map_success">映射成功</string>
    <string name="tip_asset_map_cancel_success">取消映射成功</string>
    <string name="tip_change_success">修改成功</string>
    <string name="tip_change_failed">修改失败</string>
    <string name="ranking">排名</string>
    <string name="name">名称</string>
    <string name="accumulated_points">积分累计</string>
    <string name="super_hint">超</string>
    <string name="genesis">创</string>
    <string name="google_line1">利用“两步验证”保护您的账号</string>
    <string name="google_line2">每次在执行关键操作时，您会被要求输入谷歌两步验证码</string>
    <string name="google_line3">增加一道额外的安全屏障</string>
    <string name="google_line4">请输入您的密码以及你手机上收到的唯一验证码。</string>
    <string name="google_line5">让坏人无机可乘</string>
    <string name="google_line6">即使有人盗取了您的密码</string>
    <string name="google_line7">他/她也会以为信息不足而无法登录您的账号</string>
    <string name="google_verify_opened">两步验证已开启</string>
    <string name="google_verify_start">启动谷歌两步验证</string>
   <string name="i_know">我知道了</string>
    <string name="asset_synthesis_time">时间</string>
    <string name="asset_utdm_consume">UTDM消耗</string>
    <string name="asset_utk_consume">UTK消耗</string>
    <string name="asset_handling_fee">手续费\n(UYT_TEST)</string>
    <string name="asset_handling_fees">手续费</string>
    <string name="asset_synthesis_counts">合成数量</string>
    <string name="asset_transfer_counts">转账数量</string>
    <string name="asset_other_id">对方ID</string>
</resources>