<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
   <TextView
        android:textColor="@color/color_AA9CCA"
        android:textSize="@dimen/sp_14"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/asset_synthesis_time"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/sp_14"
        android:gravity="center"
       />
    <TextView
        android:textColor="@color/color_AA9CCA"
        android:textSize="@dimen/sp_14"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/asset_utdm_consume"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/sp_14"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/color_AA9CCA"
        android:textSize="@dimen/sp_14"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/asset_utk_consume"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/sp_14"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/color_AA9CCA"
        android:textSize="@dimen/sp_14"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/asset_handling_fee"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/sp_14"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/color_AA9CCA"
        android:textSize="@dimen/sp_14"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/asset_synthesis_counts"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/sp_14"
        android:layout_marginRight="@dimen/dp_15"
        android:gravity="center"
        />
</LinearLayout>
<View
android:layout_width="match_parent"
android:layout_height="1dp"
android:background="@color/color_332852"/>
</LinearLayout>