<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/head_layout"/>
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintTop_toTopOf="parent"
          android:orientation="vertical">
          <ImageView
              android:layout_width="120dp"
              android:layout_height="120dp"
              android:layout_gravity="center"
              android:layout_marginTop="@dimen/dp_7"
              android:src="@mipmap/ic_googl_verify"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_16"
              android:textSize="@dimen/sp_15"
              android:textColor="@color/white"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line1"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_8"
              android:textSize="@dimen/sp_12"
              android:textColor="@color/color_5D5386"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line2"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_42"
              android:textSize="@dimen/sp_15"
              android:textColor="@color/white"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line3"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_8"
              android:textSize="@dimen/sp_12"
              android:textColor="@color/color_5D5386"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line4"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_42"
              android:textSize="@dimen/sp_15"
              android:textColor="@color/white"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line5"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_8"
              android:textSize="@dimen/sp_12"
              android:textColor="@color/color_5D5386"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line6"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/sp_12"
              android:textColor="@color/color_5D5386"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_line7"/>
          <TextView
              android:id="@+id/tv_google_is_verify"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_42"
              android:textSize="@dimen/sp_15"
              android:textColor="@color/white"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:gravity="center"
              android:text="@string/google_verify_opened"/>
      </LinearLayout>

          <Button
              android:text="@string/google_verify_start"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_width="match_parent"
              android:background="@drawable/btn_enable_bg"
              android:layout_marginLeft="@dimen/dp_15"
              android:layout_marginRight="@dimen/dp_15"
              android:layout_height="44dp"
              android:layout_marginTop="22dp"
              android:layout_marginBottom="@dimen/dp_60"
              android:textColor="@color/btn_enable_text_bg"
              android:enabled="true"
              android:id="@+id/okBtn"
              android:gravity="center" />
      </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>


</LinearLayout>